[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "todo-cli"
version = "1.0.0"
description = "A simple command-line todo application"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

[project.scripts]
todo = "todo:main"

[tool.setuptools]
py-modules = ["todo"]
